dns-tls/traefik-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: dns-tls
spec:
  basicAuth:
    secret: traefik-dashboard-auth
